# jornada-de-dados-aula10-bootcamp-python

./: README.md  pyproject.toml
